adjustment of the site for SEO

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>InvoicePro - Professional Invoice Generator</title>
-    <meta name="description" content="Create professional invoices with modern templates, manage business profiles, and generate clean PDFs optimized for all devices." />
+    <title>InvoicePro - Professional Invoice Generator by Dovepeak Digital Solutions</title>
+    <meta name="description" content="Create professional invoices with modern templates, manage business profiles, and generate clean PDFs optimized for all devices. Powered by Dovepeak Digital Solutions." />
+    <meta name="theme-color" content="#2563eb" />
+    <meta property="og:title" content="InvoicePro - Professional Invoice Generator by Dovepeak Digital Solutions" />
+    <meta property="og:description" content="Create professional invoices, manage clients, and streamline your business billing with InvoicePro by Dovepeak Digital Solutions." />
+    <meta property="og:image" content="/logo192.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="InvoicePro - Professional Invoice Generator by Dovepeak Digital Solutions" />
+    <meta name="twitter:description" content="Create professional invoices, manage clients, and streamline your business billing with InvoicePro by Dovepeak Digital Solutions." />
+    <meta name="twitter:image" content="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="canonical" href="https://yourdomain.com" />
+    <meta name="keywords" content="invoice, business, billing, PDF, client management, SaaS, finance, invoice generator, Dovepeak Digital Solutions" />
   </head>
   <body>
     <div id="root"></div>
